Improve html2 and improve (S)CSS

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -185,7 +185,7 @@ body {
         align-items: center;
 
         &-icon {
-            width: 100px;
+            width: 10rem;
         }
     }
 }
