Improve css for extra small, small, big, extra small font

--- a/src/sass/_large.scss
+++ b/src/sass/_large.scss
@@ -51,14 +51,14 @@
     }
 
     .nav {
-        height: 70px;
+        height: 7rem;
         top: 0;
         left: 0;
         width: 100%;
 
         &__list {
             top: 0;
-            height: 70px;
+            height: 7rem;
             transform: none;
             flex-direction: row;
             transition: none;
