--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -240,17 +240,21 @@ body {
                 }
 
                 &-heading::before {
-                    position: static;
-                    transform: translateX(-100%);
-                    content: url("../images/icons/map-pin.svg");
+                    content: "";
+                    display: inline-block;
+                    height: 1em;
+                    width: 1em;
+                    background-size: 1em 1em;
+                    background-image: url("../images/icons/map-pin.svg");
+                    background-repeat: no-repeat;
                 }
 
                 &:nth-of-type(2) &-heading::before {
-                    content: url("../images/icons/users-black.svg");
+                    background-image: url("../images/icons/users-black.svg");
                 }
 
                 &:nth-of-type(3) &-heading::before {
-                    content: url("../images/icons/phone.svg");
+                    background-image: url("../images/icons/phone.svg");
                 }
             }
         }
@@ -283,6 +287,7 @@ body {
     &__title {
         margin-bottom: 1em;
     }
+
     .slider {
         width: 90%;
         display: grid;
