--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -296,11 +296,11 @@ body {
 
         &__btn {
             background: none;
-            border: none;
             width: 70px;
             cursor: pointer;
             opacity: .7;
             transition: opacity .3s;
+            padding: 0;
 
             &:hover {
                 opacity: 1;
