--- a/src/sass/_animations.scss
+++ b/src/sass/_animations.scss
@@ -62,7 +62,7 @@
 
 @media (min-width: 992px) {
     .hero-animation {
-        animation: hero-animation .5s ease forwards;
+        animation: hero-animation .6s ease forwards;
     }
 
     @keyframes hero-animation {
@@ -73,5 +73,11 @@
         to {
             height: 60vh;
         }
+    }
+}
+
+@media (min-width: 2000px) {
+    .hero-animation {
+        animation-duration: .8s;
     }
 }
