--- a/src/sass/_large.scss
+++ b/src/sass/_large.scss
@@ -12,6 +12,7 @@
         .box {
             height: 0;
             overflow: hidden;
+            max-height: 90rem;
         }
 
         .wrapper {
@@ -22,9 +23,18 @@
             margin-bottom: 0;
         }
 
+        &__box-links,
+        &__text {
+            width: 100%;
+        }
+
         &__box-content {
             width: 50%;
+            display: grid;
+            grid-template-columns: auto;
+            grid-template-rows: auto auto auto;
             margin: 0 2.5em 0 0;
+            max-width: 850px;
         }
 
         &__title {
@@ -34,8 +44,9 @@
 
         &__hero-img {
             position: static;
-            min-height: 60vh;
+            min-height: 0;
             height: 60vh;
+            max-height: 90rem;
             width: auto;
             filter: none;
         }
@@ -152,6 +163,11 @@
 }
 
 @media (min-width: 1200px) {
+    .header {
+        &__box-content {
+            width: 45%;
+        }
+    }
     .opinion {
         .slider {
             width: 85%;
