Reduce font size

--- a/src/sass/_large.scss
+++ b/src/sass/_large.scss
@@ -1,7 +1,4 @@
 @media (min-width: 992px) {
-    body {
-        font-size: 2.5rem;
-    }
 
     .header {
         color: #000;
@@ -168,6 +165,7 @@
             width: 45%;
         }
     }
+
     .opinion {
         .slider {
             width: 85%;
@@ -193,6 +191,19 @@
                 grid-row: 3/5;
                 grid-column: 3/4;
             }
+        }
+    }
+}
+
+@media (min-width: 1500px) {
+    .our-localization {
+        .wrapper {
+            width: 80%;
+            column-gap: 4em;
+        }
+
+        &__element-list {
+            padding: 0 15px;
         }
     }
 }
