--- a/src/sass/_large.scss
+++ b/src/sass/_large.scss
@@ -16,7 +16,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            max-width: 1800px;
+            max-width: 180rem;
             margin-bottom: 0;
         }
 
@@ -31,7 +31,7 @@
             grid-template-columns: auto;
             grid-template-rows: auto auto auto;
             margin: 0 2.5em 0 0;
-            max-width: 850px;
+            max-width: 85rem;
         }
 
         &__title {
@@ -115,6 +115,38 @@
 
     }
 
+
+    .our-localization {
+
+        .wrapper {
+            width: 95%;
+            grid-template-columns: 1fr 1fr 1fr;
+            grid-template-rows: auto 1fr 1fr;
+        }
+
+        &__title {
+            grid-row: 1/2;
+            grid-column: 1/4;
+        }
+
+        &__element {
+            grid-row: 2/3;
+
+            &:nth-of-type(1) {
+                grid-column: 1/2;
+            }
+
+            &:nth-of-type(2) {
+                grid-column: 3/4;
+            }
+
+            &:nth-of-type(3) {
+                grid-row: 3/4;
+                grid-column: 2/3;
+            }
+        }
+    }
+
     .opinion {
 
         .slider {
@@ -136,7 +168,7 @@
                 width: calc(200% + 3em*2);
 
                 &-item {
-                    padding: 20px;
+                    padding: 2rem;
                 }
 
             }
@@ -174,13 +206,22 @@
 
     .our-localization {
         .wrapper {
-            grid-template-rows: auto 50px 1fr 50px;
+            grid-template-rows: auto 5rem 1fr 5rem;
             column-gap: 3em;
         }
+
+        &__title {
+            grid-row: 1/2;
+            grid-column: 1/4;
+        }
+
 
         &__element {
             grid-row: 3/5;
 
+            &:nth-of-type(1) {
+                grid-column: 1/2;
+            }
 
             &:nth-of-type(2) {
                 grid-column: 2/3;
@@ -203,7 +244,7 @@
         }
 
         &__element-list {
-            padding: 0 15px;
+            padding: 0 1.5rem;
         }
     }
 }
