--- a/src/sass/_medium.scss
+++ b/src/sass/_medium.scss
@@ -1,7 +1,7 @@
 @media (min-width: 767px) {
     html {
         font-size: 62.5%;
-        scroll-padding: 70px;
+        scroll-padding: 70rem;
     }
 
     .header {
@@ -47,34 +47,15 @@
     }
 
     .our-localization {
-
         .wrapper {
-            width: 95%;
-            grid-template-columns: 1fr 1fr 1fr;
-            grid-template-rows: auto 1fr 1fr;
+            width: 60%;
         }
 
         &__title {
             grid-row: 1/2;
-            grid-column: 1/4;
         }
 
-        &__element {
-            grid-row: 2/3;
-
-            &:nth-of-type(1) {
-                grid-column: 1/2;
-            }
-
-            &:nth-of-type(2) {
-                grid-column: 3/4;
-            }
-
-            &:nth-of-type(3) {
-                grid-row: 3/4;
-                grid-column: 2/3;
-            }
-        }
+     
     }
 
     .opinion {
@@ -82,7 +63,7 @@
             width: 70%;
 
             &__btn {
-                width: 100px;
+                width: 10rem;
             }
         }
     }
