--- a/src/sass/hamburger.scss
+++ b/src/sass/hamburger.scss
@@ -6,7 +6,7 @@
  * @link https://github.com/jonsuh/hamburgers
  */
 .hamburger {
-  padding: 15px 15px;
+  padding: 1.5rem 1.5rem;
   display: inline-block;
   cursor: pointer;
   transition-property: opacity, filter;
@@ -37,8 +37,8 @@
 }
 
 .hamburger-box {
-  width: 40px;
-  height: 24px;
+  width: 4rem;
+  height: 2.4rem;
   display: inline-block;
   position: relative;
 }
@@ -46,16 +46,16 @@
 .hamburger-inner {
   display: block;
   top: 50%;
-  margin-top: -2px;
+  margin-top: -0.2rem;
 }
 
 .hamburger-inner,
 .hamburger-inner::before,
 .hamburger-inner::after {
-  width: 40px;
-  height: 4px;
+  width: 4rem;
+  height: 0.4rem;
   background-color: white;
-  border-radius: 4px;
+  border-radius: 0.4rem;
   position: absolute;
   transition-property: transform;
   transition-duration: 0.15s;
@@ -69,18 +69,18 @@
 }
 
 .hamburger-inner::before {
-  top: -10px;
+  top: -1rem;
 }
 
 .hamburger-inner::after {
-  bottom: -10px;
+  bottom: -1rem;
 }
 
 /*
      * 3DX
      */
 .hamburger--3dx .hamburger-box {
-  perspective: 80px;
+  perspective: 8rem;
 }
 
 .hamburger--3dx .hamburger-inner {
@@ -98,9 +98,9 @@
 }
 
 .hamburger--3dx.is-active .hamburger-inner::before {
-  transform: translate3d(0, 10px, 0) rotate(45deg);
+  transform: translate3d(0, 1rem, 0) rotate(45deg);
 }
 
 .hamburger--3dx.is-active .hamburger-inner::after {
-  transform: translate3d(0, -10px, 0) rotate(-45deg);
+  transform: translate3d(0, -1rem, 0) rotate(-45deg);
 }
