--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,6 +1,6 @@
 html {
     font-size: 62.5%;
-    scroll-padding: 40px;
+    scroll-padding: 4rem;
     scroll-behavior: smooth;
 }
 
@@ -35,14 +35,14 @@ body {
     &__hero-img {
         position: absolute;
         z-index: -2;
-        top: 60px;
-        min-height: calc(100vh - 60px);
+        top: 6rem;
+        min-height: calc(100vh - 6rem);
         width: 100%;
         filter: brightness(0.5);
     }
 
     &__box-content {
-        padding: 0 20px;
+        padding: 0 2rem;
         margin: 0 auto;
     }
 
@@ -83,9 +83,9 @@ body {
         &::before {
             content: '';
             position: absolute;
-            top: -20px;
+            top: -2rem;
             left: -100%;
-            width: 80px;
+            width: 80rem;
             height: 160%;
             background-image: linear-gradient(-70deg, rgba(255, 255, 255, .5), rgba(255, 255, 255, 0));
             transform: rotate(20deg);
@@ -93,7 +93,7 @@ body {
         }
 
         &:hover::before {
-            transform: translateX(400px) rotate(20deg);
+            transform: translateX(40rem) rotate(20deg);
         }
     }
 }
@@ -105,7 +105,8 @@ body {
     position: fixed;
     display: flex;
     align-items: center;
-    height: 60px;
+    justify-content: flex-end;
+    height: 6rem;
     width: 100%;
     background-color: black;
     z-index: 100;
@@ -118,10 +119,10 @@ body {
 .nav {
     &__list {
         position: fixed;
-        height: calc(100vh - 60px);
+        height: calc(100vh - 6rem);
         transform: translateX(100%);
         width: 100%;
-        top: 60px;
+        top: 6rem;
         left: 0;
         z-index: 100;
         display: flex;
@@ -164,7 +165,7 @@ body {
     background-image: linear-gradient(45deg, rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)), url("../images/exercise-mobile.jpg");
 
     &__text {
-        padding: 0 20px;
+        padding: 0 2rem;
     }
 
     &__text:nth-of-type(1) {
@@ -200,10 +201,10 @@ body {
 @media (max-width: 500px) and (orientation: portrait) {
     .header {
         &__hero-img {
-            top: 60px;
+            top: 6rem;
             left: 50%;
             transform: translateX(-50%);
-            min-height: calc(100vh - 60px);
+            min-height: calc(100vh - 6rem);
             min-width: 100%;
         }
     }
@@ -230,6 +231,7 @@ body {
         border: 1px solid black;
         border-radius: 20px;
         padding-bottom: 1em;
+        ;
 
         &-img {
             width: 100%;
@@ -238,11 +240,12 @@ body {
 
         &-list {
             list-style: none;
-            padding: 0 10px;
+            padding: 0 1em;
 
             &-item {
+
                 &-heading {
-                    margin: 10px 0;
+                    margin: 1rem 0;
                     text-align: left;
                 }
 
@@ -303,7 +306,7 @@ body {
 
         &__btn {
             background: none;
-            width: 70px;
+            width: 7rem;
             cursor: pointer;
             opacity: .7;
             transition: opacity .3s;
@@ -363,7 +366,7 @@ body {
 
             &-item {
                 margin-right: 3em;
-                padding: 15px;
+                padding: 1.5rem;
                 background-color: #fff;
 
                 &-img {
@@ -371,11 +374,11 @@ body {
                 }
 
                 &-text {
-                    margin-top: 10px;
+                    margin-top: 1rem;
                 }
 
                 &-heading {
-                    margin-top: 100px;
+                    margin-top: 10rem;
                 }
             }
 
