Improve scroll-padding

--- a/src/sass/_components.scss
+++ b/src/sass/_components.scss
@@ -1,7 +1,7 @@
 .wrapper {
     width: 80%;
     margin: 0 auto;
-    max-width: 1600px;
+    max-width: 160rem;
 }
 
 .section-padding {
@@ -20,7 +20,7 @@
     }
 
     .section-padding {
-        padding: 70px 0;
+        padding: 7rem;
     }
 }
 
