--- a/src/sass/_components.scss
+++ b/src/sass/_components.scss
@@ -5,7 +5,7 @@
 }
 
 .section-padding {
-    padding: 4rem;
+    padding: 4rem 0;
 }
 
 .h2 {
@@ -20,7 +20,7 @@
     }
 
     .section-padding {
-        padding: 7rem;
+        padding: 7rem 0;
     }
 }
 
