--- a/src/sass/_large.scss
+++ b/src/sass/_large.scss
@@ -1,8 +1,6 @@
 @media (min-width: 992px) {
-
     .header {
-        grid-template-columns: 1fr;
-        grid-template-rows: auto 1fr;
+        justify-content: center;
         align-items: center;
         color: #000;
 
@@ -12,12 +10,12 @@
             overflow: hidden;
         }
 
-        .wrapper {
+        &__wrapper {
+            width: 80%;
             display: flex;
-            justify-content: center;
+            justify-content: space-between;
             align-items: center;
             margin-bottom: 0;
-            max-width: 180rem;
         }
 
         &__box-links,
@@ -58,37 +56,12 @@
         }
     }
 
-    .nav {
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 7rem;
-
-        &__list {
-            flex-direction: row;
-            top: 0;
-            height: 7rem;
-            transform: none;
-            transition: none;
-        }
-    }
-
-    .hamburger-div {
-        display: none;
-    }
-
-    .about-firm {
-        &__text {
-            width: 50%;
-        }
-    }
-
     .why-we {
-
-        .wrapper {
-            grid-template-columns: repeat(4, auto);
-            grid-template-rows: auto 1fr;
-            column-gap: 4vw;
+        &__wrapper {
+            display: flex;
+            justify-content: space-between;
+            flex-direction: row;
+            flex-wrap: wrap;
         }
 
         &__title {
@@ -120,7 +93,6 @@
         .wrapper {
             grid-template-columns: 1fr 1fr 1fr;
             grid-template-rows: auto 1fr 1fr;
-            width: 95%;
         }
 
         &__title {
@@ -152,7 +124,6 @@
             grid-template-columns: 1fr auto 1fr;
             grid-template-rows: 1fr auto 1fr;
             column-gap: 2em;
-            width: 95%;
 
             &__next-btn {
                 margin: 0;
@@ -173,12 +144,6 @@
             }
         }
     }
-
-    .footer {
-        .wrapper {
-            width: 80%;
-        }
-    }
 }
 
 @media (min-width: 992px) and (orientation: portrait) {
@@ -194,12 +159,6 @@
     .header {
         &__box-content {
             width: 45%;
-        }
-    }
-
-    .opinion {
-        .slider {
-            width: 85%;
         }
     }
 
