--- a/src/sass/_medium.scss
+++ b/src/sass/_medium.scss
@@ -1,56 +1,48 @@
 @media (min-width: 767px) {
     html {
-        font-size: 62.5%;
         scroll-padding: 7rem;
-    }
-
-    .header {
-
-        &__text,
-        &__box-links {
-            width: 70%;
-        }
     }
 
     .about-firm {
         background-image: linear-gradient(45deg, rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)), url("../images/exercise.jpg");
 
-        &__text {
-            width: 85%;
-        }
     }
 
     .why-we {
-        .wrapper {
-            grid-template-columns: 1fr 1fr;
-            grid-template-rows: repeat(5, auto);
-            column-gap: 3.5em;
-            width: 95%;
+        &__title {
+            grid-column: 1/4;
+            grid-row: 1/2;
         }
 
-        &__title {
-            grid-column: 1/3;
+        &__wrapper {
+            display: grid;
+            grid-template-columns: auto 1fr auto;
+            grid-row: auto auto auto;
+
         }
 
         &__element {
-            grid-column: 1/2;
+            grid-row: 2/3;
+            &:nth-child(odd) {
+                grid-column: 1/2;
+            }
 
-            &:nth-of-type(even) {
-                grid-column: 2/3;
+            &:nth-child(2),
+            &:nth-child(3) {
+                grid-row: 3/4;
+            }
+
+            &:nth-child(even) {
+                grid-column: 3/4;
             }
 
             &-icon {
                 margin-bottom: 1rem;
             }
-
         }
     }
 
     .our-localization {
-        .wrapper {
-            width: 60%;
-        }
-
         &__title {
             grid-row: 1/2;
         }
@@ -58,7 +50,6 @@
 
     .opinion {
         .slider {
-            width: 70%;
 
             &__btn {
                 width: 10rem;
@@ -66,93 +57,4 @@
         }
     }
 
-    .footer {
-        .wrapper {
-            display: grid;
-            grid-template-columns: auto 1fr auto;
-            grid-template-rows: auto auto auto;
-            grid-template-areas:
-                "title title title"
-                "nav . text"
-                "end-text end-text end-text";
-            width: 85%;
-        }
-
-        &__box-text {
-            justify-content: flex-end;
-        }
-
-        &__title {
-            grid-area: title;
-        }
-
-        &__nav {
-            grid-area: nav;
-            display: block;
-
-            &-list {
-                list-style: none;
-
-                &-item {
-                    display: grid;
-                    grid-template-columns: 5em 1fr;
-                    grid-template-rows: 1fr;
-                    align-items: center;
-                    column-gap: 0.3em;
-
-
-                    &:hover::before {
-                        transform: scaleX(0);
-                    }
-
-                    &::before {
-                        transform-origin: right;
-                        margin-left: auto;
-                        grid-column: 1/2;
-                        content: '';
-                        display: block;
-                        width: 1em;
-                        height: 3px;
-                        background-color: #fff;
-                        transition: .5s;
-                    }
-
-                    &:nth-child(2)::before {
-                        width: 2em;
-                    }
-
-                    &:nth-child(3)::before {
-                        width: 3em;
-                    }
-
-                    &:nth-child(4)::before {
-                        width: 4em;
-                    }
-
-                    &:nth-child(5)::before {
-                        width: 5em;
-                    }
-
-                    &-link {
-                        width: 100%;
-                        grid-column: 2/3;
-                        color: #fff;
-                        text-decoration: none;
-                    }
-
-
-                }
-            }
-
-        }
-
-        &__box {
-            grid-area: text;
-            margin: 0 0 0 auto;
-        }
-
-        &__text {
-            grid-area: end-text;
-        }
-    }
 }
