--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,439 +1,295 @@
-html {
-    font-size: 62.5%;
-    scroll-padding: 4rem;
-    scroll-behavior: smooth;
-}
-
-body {
-    width: 100%;
-    font-size: 2rem;
-    color: black;
-    font-family: 'Lato', sans-serif;
-}
-
-*,
-::before,
-::after {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    line-height: 125%;
-}
-
+@import 'reset';
 @import 'animations';
-@import 'components';
 
 .header {
-    position: relative;
-    display: grid;
-    grid-template-rows: 1fr;
+  position: relative;
+  display: flex;
+  height: 100vh;
+  color: #fff;
+  overflow: hidden;
+  align-items: center;
+  justify-content: flex-end;
+  flex-direction: column;
+  width: 100%;
+
+  &__hero-img {
+    position: absolute;
+    top: 6rem;
     width: 100%;
-    height: 100vh;
-    color: #FFF;
-    overflow: hidden;
-
-    &__hero-img {
-        position: absolute;
-        top: 6rem;
-        width: 100%;
-        min-height: calc(100vh - 6rem);
-        filter: brightness(0.5);
-        z-index: -2;
-    }
-
-    &__box-content {
-        padding: 0 2rem;
-        margin: 0 auto;
-    }
-
-
-    .wrapper {
-        margin-bottom: 2em;
-        width: 100%;
-    }
-
-    &__title {
-        margin-bottom: 1rem;
-        text-align: left;
-    }
-
-    &__text {
-        margin-bottom: 0.5rem;
-
-        &:last-of-type {
-            margin-bottom: 1em;
-        }
-    }
-
-    &__box-links {
-        display: flex;
-        justify-content: space-between;
-    }
-
-    &__link {
-        position: relative;
-        padding: 0.5em 1em;
-        margin-bottom: 1em;
-        color: white;
-        background-color: black;
-        border-radius: 8px;
-        text-decoration: none;
-        overflow: hidden;
-
-        &::before {
-            position: absolute;
-            top: -2rem;
-            left: -100%;
-            width: 8rem;
-            height: 160%;
-            background-image: linear-gradient(-70deg, rgba(255, 255, 255, .5), rgba(255, 255, 255, 0));
-            transform: rotate(20deg);
-            transition: .35s;
-            content: '';
-        }
-
-        &:hover::before {
-            transform: translateX(40rem) rotate(20deg);
-        }
-    }
-}
-
-.hamburger-div {
-    position: fixed;
-    top: 0;
+    min-height: calc(100vh - 6rem);
+    filter: brightness(0.5);
+    z-index: -2;
     left: 0;
+  }
+
+  &__box-content {
+    margin: 0 auto;
+  }
+
+  &__wrapper {
+    margin-bottom: 2em;
+  }
+
+  &__title {
+    margin-bottom: 1rem;
+    text-align: left;
+  }
+
+  &__text {
+    margin-bottom: 0.5rem;
+
+    &:last-of-type {
+      margin-bottom: 1em;
+    }
+  }
+
+  &__box-links {
     display: flex;
-    align-items: center;
-    justify-content: flex-end;
-    padding: 0;
-    height: 6rem;
-    width: 100%;
+    justify-content: space-between;
+  }
+
+  &__link {
+    position: relative;
+    padding: 0.5em 1em;
+    color: white;
     background-color: black;
-    z-index: 100;
+    border-radius: 8px;
+    border-width: 2px;
+    text-decoration: none;
+    transition: background-color 0.3s, border-color 0.3s, color 0.3s;
 
-    .hamburger {
-        padding: 1rem 1.5rem;
+    &:hover {
+      background-color: #fff;
+      border-color: #000;
+      color: #000;
     }
+  }
 }
-
-.nav {
-    &__list {
-        position: fixed;
-        top: 6rem;
-        left: 0;
-        transform: translateX(100%);
-        height: calc(100vh - 6rem);
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: space-around;
-        width: 100%;
-        background-color: black;
-        list-style: none;
-        transition: transform .5s;
-        z-index: 100;
-
-        &--active {
-            transform: translateX(0%);
-        }
-    }
-
-    &__link {
-        display: block;
-        color: white;
-        text-decoration: none;
-        transition: transform .3s;
-
-        &:hover {
-            transform: scale(1.15);
-        }
-    }
-
-}
-
-
 
 .about-firm {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    background-size: cover;
-    background-position: center;
-    background-attachment: fixed;
-    background-image: linear-gradient(45deg, rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)), url("../images/exercise-mobile.jpg");
-    color: #FFF;
-    
-    &__text {
-        padding: 0 2rem;
-    }
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  background-image: linear-gradient(
+      45deg,
+      rgba(0, 0, 0, 0.75),
+      rgba(0, 0, 0, 0.75)
+    ),
+    url('../images/exercise-mobile.jpg');
+  color: #fff;
 
-    &__text:nth-of-type(1) {
-        margin-bottom: 0.5em;
-    }
-
+  &__text:nth-of-type(1) {
+    margin-bottom: 0.5em;
+  }
 }
 
 .why-we {
-    .wrapper {
-        width: 100%;
-        display: grid;
-        grid-template-columns: 1fr;
-        grid-template-rows: auto repeat(4, 1fr);
-        row-gap: 1.5em;
-    }
+  &__title {
+    width: 100%;
+  }
 
-    &__title {
-        margin: 0;
-    }
+  &__wrapper {
+    display: flex;
+    flex-direction: column;
+  }
 
-    &__element {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
+  &__element {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 2rem;
 
-        &-icon {
-            width: 10rem;
-        }
+    &-icon {
+      width: 7.5rem;
+      margin-bottom: 1rem;
     }
+  }
 }
 
 @media (max-width: 500px) and (orientation: portrait) {
-    .header {
-        &__hero-img {
-            top: 6rem;
-            left: 50%;
-            transform: translateX(-50%);
-            min-height: calc(100vh - 6rem);
-            min-width: 100%;
-        }
+  .header {
+    &__hero-img {
+      top: 6rem;
+      left: 50%;
+      transform: translateX(-50%);
+      min-height: calc(100vh - 6rem);
+      min-width: 100%;
     }
+  }
 }
 
-
-
 .our-localization {
-    .wrapper {
-        display: grid;
-        grid-template-columns: 1fr;
-        grid-template-rows: auto repeat(3, 1fr);
-        row-gap: 1.5em;
-        width: 85%;
+  .wrapper {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto repeat(3, 1fr);
+    row-gap: 1.5em;
+    overflow: hidden;
+  }
+
+  &__title {
+    margin: 0;
+  }
+
+  &__element {
+    padding-bottom: 1em;
+    border: 1px solid black;
+    border-radius: 20px;
+    text-align: right;
+
+    &-img {
+      width: 100%;
+      border-radius: 20px 20px 0 0;
+    }
+
+    &-list {
+      padding: 0 1em;
+      list-style: none;
+
+      &-item {
+        &-heading {
+          margin: 1rem 0;
+          text-align: left;
+        }
+
+        &-heading::before {
+          display: inline-block;
+          height: 1em;
+          width: 1em;
+          background-size: 1em 1em;
+          background-image: url('../images/icons/map-pin.svg');
+          background-repeat: no-repeat;
+          content: '';
+        }
+
+        &:nth-of-type(2) &-heading::before {
+          background-image: url('../images/icons/users-black.svg');
+        }
+
+        &:nth-of-type(3) &-heading::before {
+          background-image: url('../images/icons/phone.svg');
+        }
+      }
+    }
+
+    &-coach-list {
+      margin: 1.5rem 0;
+      display: flex;
+      align-items: center;
+      justify-content: flex-end;
+
+      &-box {
+        position: relative;
+        margin-right: 0.5rem;
+        height: 5rem;
+        width: 5rem;
+        border-radius: 50%;
         overflow: hidden;
+      }
+
+      &-img {
+        height: 100%;
+        min-width: 100%;
+        background-color: black;
+      }
     }
-
-    &__title {
-        margin: 0;
-    }
-
-    &__element {
-        padding-bottom: 1em;;
-        border: 1px solid black;
-        border-radius: 20px;
-        text-align: right;
-
-        &-img {
-            width: 100%;
-            border-radius: 20px 20px 0 0;
-        }
-
-        &-list {
-            padding: 0 1em;
-            list-style: none;
-
-            &-item {
-
-                &-heading {
-                    margin: 1rem 0;
-                    text-align: left;
-                }
-
-                &-heading::before {
-                    display: inline-block;
-                    height: 1em;
-                    width: 1em;
-                    background-size: 1em 1em;
-                    background-image: url("../images/icons/map-pin.svg");
-                    background-repeat: no-repeat;
-                    content: "";
-                }
-
-                &:nth-of-type(2) &-heading::before {
-                    background-image: url("../images/icons/users-black.svg");
-                }
-
-                &:nth-of-type(3) &-heading::before {
-                    background-image: url("../images/icons/phone.svg");
-                }
-            }
-        }
-
-        &-coach-list {
-            margin: 1.5rem 0;
-            display: flex;
-            align-items: center;
-            justify-content: flex-end;
-
-            &-box {
-                position: relative;
-                margin-right: 0.5rem;
-                height: 5rem;
-                width: 5rem;
-                border-radius: 50%;
-                overflow: hidden;
-            }
-
-            &-img {
-                height: 100%;
-                min-width: 100%;
-                background-color: black;
-            }
-        }
-    }
+  }
 }
 
 .opinion {
-    &__title {
-        margin-bottom: 1em;
+  &__title {
+    margin-bottom: 1em;
+  }
+
+  .slider {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: auto 1fr;
+
+    &__btn {
+      padding: 0;
+      width: 7rem;
+      opacity: 0.7;
+      background: none;
+      transition: opacity 0.3s;
+      cursor: pointer;
+
+      &:hover {
+        opacity: 1;
+      }
+
+      &-icon {
+        width: 100%;
+      }
     }
 
-    .slider {
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
-        grid-template-rows: auto 1fr;
-        width: 90%;
-
-        &__btn {
-            padding: 0;
-            width: 7rem;
-            opacity: .7;
-            background: none;
-            transition: opacity .3s;
-            cursor: pointer;
-
-            &:hover {
-                opacity: 1;
-            }
-
-            &-icon {
-                width: 100%;
-            }
-        }
-
-        &__back-btn {
-            grid-row: 2/3;
-            grid-column: 1/2;
-        }
-
-
-
-        &__next-btn {
-            grid-row: 2/3;
-            grid-column: 3/4;
-            margin-left: auto;
-        }
-
-        &__extra-box {
-            grid-column: 1/4;
-            grid-row: 1/2;
-            width: 100%;
-            overflow: hidden;
-        }
-
-        &__box {
-            display: grid;
-            grid-template-rows: 1fr;
-            grid-template-columns: repeat(4, 1fr);
-            width: calc(400% + 3em*4);
-            transition: transform .7s;
-
-            &--slide1 {
-                transform: translateX(0);
-            }
-
-            &--slide2 {
-                transform: translateX(-25%);
-            }
-
-            &--slide3 {
-                transform: translateX(-50%);
-            }
-
-            &--slide4 {
-                transform: translateX(-75%);
-            }
-
-            &-item {
-                padding: 1.5rem;
-                margin-right: 3em;
-                background-color: #fff;
-
-                &-img {
-                    width: 100%;
-                }
-
-                &-text {
-                    margin-top: 1rem;
-                }
-
-                &-heading {
-                    margin-top: 10rem;
-                }
-            }
-
-        }
+    &__back-btn {
+      grid-row: 2/3;
+      grid-column: 1/2;
     }
-}
 
-.footer {
-    .wrapper {
-        width: 95%;
+    &__next-btn {
+      grid-row: 2/3;
+      grid-column: 3/4;
+      margin-left: auto;
+    }
+
+    &__extra-box {
+      grid-column: 1/4;
+      grid-row: 1/2;
+      width: 100%;
+      overflow: hidden;
     }
 
     &__box {
-        margin: 0 auto;
-        width: fit-content;
+      display: grid;
+      grid-template-rows: 1fr;
+      grid-template-columns: repeat(4, 1fr);
+      width: calc(400% + 3em * 4);
+      transition: transform 0.7s;
+
+      &--slide1 {
+        transform: translateX(0);
+      }
+
+      &--slide2 {
+        transform: translateX(-25%);
+      }
+
+      &--slide3 {
+        transform: translateX(-50%);
+      }
+
+      &--slide4 {
+        transform: translateX(-75%);
+      }
+
+      &-item {
+        padding: 1.5rem;
+        margin-right: 3em;
+        background-color: #fff;
+
+        &-img {
+          width: 100%;
+        }
 
         &-text {
-            display: flex;
-            align-items: center;
-            margin: 1rem 0;
-
-            &::before {
-                position: static;
-                display: inline-block;
-                width: 2em;
-                height: 1.5em;
-                background-repeat: no-repeat;
-                background-size: 1.5em 1.5em;
-                content: '';
-            }
-
-            &:nth-child(1)::before {
-                background-image: url("../images/icons/phone-white.svg");
-            }
-
-            &:nth-child(2)::before {
-                background-image: url("../images/icons/mail.svg");
-            }
-
-            &:nth-child(3)::before {
-                background-image: url("../images/icons/archive-white.svg");
-            }
-
+          margin-top: 1rem;
         }
-    }
 
-    &__nav {
-        display: none;
+        &-heading {
+          margin-top: 10rem;
+        }
+      }
     }
-
-    &__text {
-        margin-top: 1.5em;
-        text-align: center;
-    }
+  }
 }
 
+@import 'footer';
 
 @import 'medium';
 @import 'large';
