--- a/src/sass/_large.scss
+++ b/src/sass/_large.scss
@@ -11,6 +11,7 @@
         }
 
         &__wrapper {
+            height: 90rem;
             width: 80%;
             display: flex;
             justify-content: space-between;
