--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -15,10 +15,11 @@
   &__hero-img {
     position: absolute;
     top: 6rem;
-    width: 100%;
-    min-height: calc(100vh - 6rem);
+    object-fit: cover;
     filter: brightness(0.5);
     z-index: -2;
+    min-height: calc(100vh - 6rem);
+    min-width: 100%;
     left: 0;
   }
 
@@ -74,11 +75,9 @@
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
-  background-image: linear-gradient(
-      45deg,
+  background-image: linear-gradient(45deg,
       rgba(0, 0, 0, 0.75),
-      rgba(0, 0, 0, 0.75)
-    ),
+      rgba(0, 0, 0, 0.75)),
     url('../images/exercise-mobile.jpg');
   color: #fff;
 
@@ -178,24 +177,6 @@
 
     &-coach-list {
       margin: 1.5rem 0;
-      display: flex;
-      align-items: center;
-      justify-content: flex-end;
-
-      &-box {
-        position: relative;
-        margin-right: 0.5rem;
-        height: 5rem;
-        width: 5rem;
-        border-radius: 50%;
-        overflow: hidden;
-      }
-
-      &-img {
-        height: 100%;
-        min-width: 100%;
-        background-color: black;
-      }
     }
   }
 }
